--- a/calendar/style.css
+++ b/calendar/style.css
@@ -25,4 +25,26 @@ body {
 .month-name {
   margin: 0;
   background-color: orangered;
+  color: white;
+  padding: 10px;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.day-name {
+  font-size: 20px;
+  color: darkgray;
+}
+
+.day-number {
+  font-size: 80px;
+  margin: 0;
+  font-weight: bold;
+}
+
+.year {
+  margin: 20px 0;
+  font-size: 20px;
+  color: darkgrey;
+  font-weight: 500;
 }
