--- a/digital-clock/style.css
+++ b/digital-clock/style.css
@@ -17,11 +17,11 @@ body {
 h2 {
   text-transform: uppercase;
   letter-spacing: 4px;
-  font-size: 34px;
-  font-weight: 400;
+  font-size: 36px;
+  font-weight: 600;
   text-align: center;
-  color: white;
-  margin-bottom: 20px;
+  color: rgb(70, 14, 143);
+  margin-bottom: 120px;
 }
 
 .clock {
