--- a/search-bar/Style.css
+++ b/search-bar/Style.css
@@ -24,6 +24,7 @@ body {
     -6px -6px 10px rgba(255, 255, 255, 0.7);
   margin: 10px;
   position: relative;
+  transition: width 1.5s;
 }
 
 .magnifier {
@@ -38,14 +39,19 @@ body {
   position: absolute;
   right: 20px;
   cursor: pointer;
+  transition: width 0.4s;
+  transition-delay: 1s;
 }
 
 .input {
   background-color: transparent;
   border: none;
   margin: 10px 50px;
+  width: 100%;
   outline: none;
   color: rgb(100, 100, 100);
+  transition: width 1s;
+  transition-delay: 0.5s;
 }
 
 .active.search-bar-container {
