--- a/color-flipper/style.css
+++ b/color-flipper/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 80vh;
   margin: 0 auto;
 }
 
@@ -28,9 +28,11 @@ button {
   border: none;
   width: 260px;
   height: 80px;
+  border: 1px solid black;
   border-radius: 8px;
   color: white;
   letter-spacing: 5px;
+  cursor: pointer;
 }
 
 #green {
