--- a/more-projects-js/style.css
+++ b/more-projects-js/style.css
@@ -22,11 +22,18 @@ body {
   width: 500px;
   height: 280px;
   border: 1px solid red;
-  margin: 150px auto;
+  margin: 90px auto;
+  position: absolute;
+  top: 0;
+  left: 150px;
 }
 
 h3 > span {
   color: red;
+}
+
+p {
+  font-size: 12px;
 }
 
 button {
@@ -38,4 +45,27 @@ button {
   color: white;
   letter-spacing: 3px;
   margin-top: 50px;
+}
+
+.container-modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 800px;
+  height: 480px;
+  border: 1px solid red;
+  margin: 150px auto;
+  position: absolute;
+  top: 250px;
+  left: 150px;
+}
+
+.modal {
+  display: none;
+}
+
+.modal.open {
+  display: flex;
 }
